src/objects/Medical_Documents__c.object
<CustomObject>
    <fields>
        <fullName>Diagonis__c</fullName>
        <label>Diagonis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_on_Rx__c</fullName>
        <label>Doctor on Rx</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Doctor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medical Documents</relationshipLabel>
        <relationshipName>Doctor_on_Rx</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dx_Code__c</fullName>
        <label>Dx Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Documentation_for_Doctor_Sign__c</fullName>
        <label>Extra Documentation for Doctor Sign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Length_Of_Need__c</fullName>
        <label>Length Of Need (in months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medical_Document_Type__c</fullName>
        <label>Medical Document Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Medical Documents</relationshipLabel>
        <relationshipName>Medical_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rx_Date__c</fullName>
        <label>Rx Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rx_Description__c</fullName>
        <label>Rx Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx_Reason__c</fullName>
        <label>Rx Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx__c</fullName>
        <label>Rx</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Template__c</fullName>
        <label>Submission Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Medical Document</label>
    <nameField>
        <label>Medical Documents Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>